# interview-prep-coach

./: .env.example  .gitignore  README.md  SCOUT_PROMPT.md  pyproject.toml
docs/plans/: 2026-02-23-autonomous-evolution-design.md  2026-02-23-autonomous-evolution-implementation.md  2026-02-23-conversation-first-implementation.md  2026-02-23-conversation-first-redesign.md  2026-02-24-answer-versioning-job-context-design.md  2026-02-24-answer-versioning-job-context-implementation.md
interview_prep_coach/: __init__.py  anthropic_session.py  cli.py  models.py
interview_prep_coach/coaching/: __init__.py  style_manager.py
interview_prep_coach/conversation/: __init__.py  context_builder.py  memory.py  session.py  storage.py  thread.py
interview_prep_coach/evolution/: __init__.py  effectiveness.py  pattern_extractor.py  relationship_tracker.py  state.py
interview_prep_coach/job/: __init__.py  context.py  extractor.py
interview_prep_coach/modes/: __init__.py  focused.py  interview_day.py  review.py  timed.py
interview_prep_coach/practice/: __init__.py  engine.py  feedback_analyzer.py  question_bank.py  scorer.py
interview_prep_coach/tracking/: __init__.py  post_interview.py  progress.py
interview_prep_coach/utils/: __init__.py  logger.py
interview_prep_coach/versioning/: __init__.py  models.py  storage.py
samples/: sample_job_posting.md  sample_resume.md
tests/: __init__.py  test_cli_hard_mode.py  test_cli_job_flags.py  test_models.py
tests/coaching/: test_style_manager.py
tests/conversation/: test_context_builder.py  test_memory.py  test_session_evolution.py  (+3 more)
(+14 files in other folders)
